traces/bug_205.txt
examples++-mpi/MUMPS_FreeFem.cpp:188: error: DEAD_STORE
  The value written to &ierr (type int) is never used.
Showing all 1 steps of the trace


examples++-mpi/MUMPS_FreeFem.cpp:188:5: Write of unused value
186.          INITIALIZE THE MUMPS PROCESS GRID. 
187.          ------------------------------------------------------------*/
188.       ierr = MPI_Comm_rank(comm, &myid);
           ^
189.       
190.       if( myid ==0){
